--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,11 +3,11 @@
 
 }
 
-mat-toolbar {
+ mat-toolbar {
     position: relative;
     z-index: 5;
 }
 
-mat-sidenave-container {
-    height: calc(100vh-64px);
+mat-sidenav-container {
+    height: calc(100vh - 64px);
 }
