--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,18 @@
-<mat-toolbar calss="mat-elevation-z3">
-  <button mat-icon-button>
+<mat-toolbar class="mat-elevation-z3">
+  <button mat-icon-button (click)="collapsed.set((!collapsed()))">
     <mat-icon>menu</mat-icon>
   </button>
 </mat-toolbar>
+
 <mat-sidenav-container>
-  <mat-sidenav opened mode="side" [style.width]="'250px'"> hello</mat-sidenav>
-  <mat-sidenav-content class="content">
+
+  <mat-sidenav opened mode="side" [style.width]="sidenavWidth()">
+    <app-custom-sidenav [collapsed]="collapsed()"></app-custom-sidenav>
+  </mat-sidenav>
+
+
+  <mat-sidenav-content class="content" [style.margin-left]="sidenavWidth()">
+    hiiii
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 
