--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,9 @@
 .content {
-    padding: 24px;
+    padding: 30px !important;
 
 }
 
- mat-toolbar {
+mat-toolbar {
     position: relative;
     z-index: 5;
 }
@@ -12,3 +12,13 @@ mat-sidenav-container {
     height: calc(100vh - 64px);
 }
 
+mat-sidenav,
+mat-sidenav-content {
+    transition: all 500ms ease-in-out;
+
+}
+
+mat-sidenav{
+    background: rgb(243, 243, 243);
+    border-radius: 0px;
+}
