--- a/src/app/components/custom-sidenav/custom-sidenav.component.css
+++ b/src/app/components/custom-sidenav/custom-sidenav.component.css
@@ -1,29 +1,50 @@
+:host * {
+    transition: all 500ms ease-in-out;
+    
+}
+
 .sidenav-header {
     padding-top: 24px;
     text-align: center;
+    
+}
 
+img {
+    border-radius: 100%;
+    object-fit: cover;
+    margin-bottom: 10px;
+}
 
-    img {
-        border-radius: 100%;
-        object-fit: cover;
-        margin-bottom: 10px;
+.header-text {
+    h2 {
+        margin: 0;
+        font-size: 1rem;
+        line-height: 1.5rem;
     }
 
-    .header-text {
-        h2 {
-            margin: 0;
-            font-size: 1rem;
-            line-height: 1.5rem;
-        }
-
-        p {
-            margin: 0;
-            font-size: 0.8rem;
-        }
-    }
-
-    .hide-header-text{
-      opacity: 0;  
-      height: 0px;
+    p {
+        margin: 0;
+        font-size: 0.8rem;
     }
 }
+
+.hide-header-text {
+    opacity: 0;
+    height: 0px !important;
+}
+
+.menu-item{
+    padding: 24px ;  
+ 
+}
+
+.selected-menu-item {
+    border-left-color: rgb(99, 30, 99); 
+    background: rgb(240, 226, 240) !important;
+}
+
+
+
+
+
+
