add submenu for video and fix route

--- a/src/app/components/custom-sidenav/custom-sidenav.component.html
+++ b/src/app/components/custom-sidenav/custom-sidenav.component.html
@@ -1,7 +1,7 @@
 <div class="sidenav-header">
     <img src="assets/profile.jpg" [width]="profilePicSize()" [height]="profilePicSize()" />
     <div class="header-text" [class.hide-header-text]="sideNavCollapsed()">
-        <h2>your channel</h2>
+        <h2>your account</h2>
         <p> atefeh bakefayat</p>
     </div>
 </div>
